# save_slack_mesage

./: .gitignore  gss.py  main.py  pyproject.toml
