[tool.poetry]
name = "save-slack-mesage"
version = "0.1.0"
description = ""
authors = ["akito harada"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
slack-sdk = "^3.26.2"
google-cloud-storage = "^2.14.0"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.116.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
